# datetool

./: .gitignore  README.md  datetools.py  genindex.html  index.html  mypy.ini  objects.inv  pyproject.toml  requirements.txt  ruff.toml  search.html  searchindex.js  setup.py  usage.html
.doctrees/: environment.pickle  index.doctree  usage.doctree
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-docs.yml  lint.yml
_sources/: index.rst.txt
docs/: Makefile  conf.py  requirements.txt  usage.rst
docs/_build/html/: genindex.html  index.html  search.html  searchindex.js  usage.html
docs/_build/html/.doctrees/: environment.pickle  index.doctree  usage.doctree
