[project]
name = "datetool"
version = "0.1.0"
dependencies = [
    "jsonargparse",
    "pytz",
    "sphinx",
    "sphinx-argparse",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
lint = [
    "ruff==0.11.4",
    "mypy",
]

[build-system]
requires = ["setuptools>=78.1.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
exclude = "build/"
