[project]
name = "datetool"
version = "0.1.1"
description = "A Python datetime utility tool."
requires-python = ">=3.9"
dependencies = [
    "jsonargparse",
    "pytz",
    "sphinx",
    "sphinx-argparse",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]
lint = [
    "ruff==0.11.5",
    "mypy",
]
dev = [
    "ruff",
    "mypy",
    "pytest",
]

[build-system]
requires = ["setuptools>=78.1.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend = "ruff.toml"

[tool.mypy]
exclude = "build/"
